// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should see no expenses 1`] = `
<div>
  <h2>
    Expense Summary
  </h2>
  <p>
    Viewing 
    0
     
    expenses
     totaling 
    $0.00
  </p>
</div>
`;

exports[`Should see one expense totaling $90.00 1`] = `
<div>
  <h2>
    Expense Summary
  </h2>
  <p>
    Viewing 
    1
     
    expense
     totaling 
    $90.00
  </p>
</div>
`;

exports[`Should see two expenses totaling $94.43 1`] = `
<div>
  <h2>
    Expense Summary
  </h2>
  <p>
    Viewing 
    2
     
    expenses
     totaling 
    $94.43
  </p>
</div>
`;
